--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-htmlhint": "~0.4.0",
     "grunt-newer": "~0.6.0",
     "grunt-packager": "~0.1.0",
+    "grunt-string-replace": "~0.2.7",
     "grunt-styleguide": "~0.2.14",
     "grunt-svgmin": "~0.3.0",
     "grunt-sync": "0.0.4"
