--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "devDependencies": {
     "assemble": "~0.4.32",
     "connect-livereload": "~0.3.1",
+    "css-parse": "~1.5.3",
     "grunt": "~0.4.2",
     "grunt-autoprefixer": "~0.6.3",
+    "grunt-combine-media-queries": "~1.0.9",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-imagemin": "~0.4.0",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-watch": "~0.5.3",
