Moved variables from global-variables.scss into subfolder `variables` and made one file for each variable-category | fixed indention on extend-files

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-kickstart-assemble",
   "description": "A Project-Setup for Assemble",
   "homepage": "https://github.com/rastersysteme/project-kickstart-assemble",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "license": "MIT",
   "readmeFilename": "README.md",
   "repository": {
@@ -41,6 +41,7 @@
     "grunt-packager": "~0.1.0",
     "grunt-phantomas": "~0.5.1",
     "grunt-photobox": "~0.6.0",
+    "grunt-prettify": "~0.3.4",
     "grunt-string-replace": "~0.2.7",
     "grunt-styleguide": "~0.2.14",
     "grunt-svgmin": "~0.3.0",
